--- a/house_congress.html
+++ b/house_congress.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- Encabezado de la página web-->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid" id="navbar">
             <a href="index.html"><img src="./assets/logoTGIF.png" alt="Logo TGIF" id="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
                             <li><a class="dropdown-item" href="senate_congress.html">Senate</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Attendance</a>
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list-ul"></i> Attendance</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="house_attendance.html">House</a></li>
                             <li><a class="dropdown-item" href="senate_attendance.html">Senate</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Party loyalty</a>
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-star-fill"></i> Party loyalty</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="house_loyalty.html">House</a></li>
                             <li><a class="dropdown-item" href="senate_loyalty.html">Senate</a></li>
@@ -48,7 +48,7 @@
         </div>
     </nav>
 <!--Contenidos de la página web-->
-    <main class="container-fluid"  id="party">
+    <main>
         <section class="clearfix">
             <h2 class="subtitle">Congressmen</h2>
                 <p class="text">The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
